# MCPFoundations

./: README.md  README_MCP.md  pyproject.toml
src/0_MCP_client_server/: .env  client.py  server.py
src/1_MCP_RAG/: .env  rag_client.py  rag_server.py
src/1_MCP_RAG/data/rag_db/: chroma.sqlite3
src/2_MCP_GraphRAG/: .env  client.py  server.py
src/2_MCP_GraphRAG/doupocangqiong/: settings.yaml
src/2_MCP_GraphRAG/doupocangqiong/cache/community_reporting/: chat_create_community_report_1a1ea1bd2bc6a10dd046879f1fa801b5979a4fc0125505eff9c569d309db60f6_v2  chat_create_community_report_9297470a7bb3cd913c611bf07c2e67fafcc72dc2524704c36ac364b02c0045db_v2  chat_create_community_report_9b430ed019203b6b64281e0a7eb8e24b74cca988609a5f8e781b1008a424c92a_v2  chat_create_community_report_b89d4e25f274f377ada77f2b0c1a48d4b497de6ee36c90ddb8a99dbdc4d59849_v2  chat_create_community_report_ddb39b30306c39b5bd46ffc146fdeb5f96986aaba7d9d2704d41e4cbb3335e2b_v2
src/2_MCP_GraphRAG/doupocangqiong/cache/extract_graph/: chat_015db89628275c5353a110a6046c7b0378588f00faa7b07074cbe574d01c5efb_v2  chat_0228d623f395f340947dc62b62a64826f688696c3cc6936ac994a79428eb8cbe_v2  chat_0401e610d88d5d0125c377ba13133a5ae88ffac562d57b291f07722731962402_v2  chat_0628b163c22014b31db3b3147ef2b8452b963adb3693dd2cf66322d0570d7b82_v2  (+500 more)
src/2_MCP_GraphRAG/doupocangqiong/logs/: logs.txt
src/2_MCP_GraphRAG/doupocangqiong/output/: communities.parquet  community_reports.parquet  documents.parquet  entities.parquet  relationships.parquet  stats.json  text_units.parquet
(+42 files in other folders)
